--- a/Components/src/assets/scss/element/_form-field.scss
+++ b/Components/src/assets/scss/element/_form-field.scss
@@ -2,7 +2,7 @@
   display: flex;
   flex-direction: column;
   width: 100%;
-  padding: 0.5rem 0;
+  padding: 1rem 0;
 }
 
 .form-field__label {
